java 17 update, new app model and structure